# project_root

./: .gitignore  main.py  pyproject.toml
crc/: masks.py
src/: masks.py  processing.py  widget.py
tests/: test_masks.py
