[project]
name = "project-root"
version = "0.1.0"
description = "ДЗ SkyPro"
readme = "README.md"
license = {text = "MIT"}
requires-python = "^3.14"
authors = [
    {name = "konstantin", email = "kostyani4y@yandex.ru"}
]
dependencies = [
    # Сюда добавить основные библиотеки (например, requests), когда понадобятся
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8>=7.3.0,<8.0.0",
    "black>=26.3.1,<27.0.0",
    "isort>=8.0.1,<9.0.0",
    "mypy>=1.20.0,<2.0.0",
    "pyproject-flake8"
]

[tool.black]
line-length = 79
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.14"
strict = true

[tool.flake8]
max-line-length = 79
extend-ignore = "E203"
exclude = [".git", "__pycache__", "dist"]